# Ecommerce

./: .env_dev  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  db_depends.py  main.py  payments.py  schemas.py
app/migrations/versions/: 081fbdd6cb20_initial_migration_for_postgresql.py  28e9f86d7366_create_search_vector.py  2ab1b0be9975_add_orders_and_order_items.py  43abfa6aa146_initial_migration_for_postgresql.py  50b1ea6e1aa2_initial_migration_for_postgresql.py  acc356061038_add_orders_and_order_items.py  e87082a47dd9_create_cart.py
app/models/: __init__.py  categories.py  orders.py  products.py  users.py
app/routers/: cart.py  categories.py  orders.py  payments.py  products.py  users.py
