[tool.poetry]
name = "fastapi-ecommerce"
version = "0.1.0"
description = ""
authors = ["snail <sgefsnkiospch908@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.129.0"
alembic = "^1.18.4"
sqlalchemy = "^2.0.46"
black = "^26.1.0"
isort = "^8.0.0"
asyncpg = "^0.31.0"
greenlet = "^3.3.2"
uvicorn = "^0.41.0"
email-validator = "^2.3.0"
jwt = "^1.4.0"
passlib = "^1.7.4"
dotenv = "^0.9.9"
python-multipart = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
